package edu.hitsz.factory.enemy;

public enum EnemyType {
    MOB,
    ELITE
}
