package edu.hitsz.factory.prop;

public enum PropType {
    BLOOD,
    BOMB,
    BULLET
}
